--- a/src/about.html
+++ b/src/about.html
@@ -1,18 +1,14 @@
 ---
 layout: base.njk
-pageTitle: "About Properties 4 Creations - Veteran Housing Mission"
-description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for
-families and service members in East Texas."
+title: "About Properties 4 Creations - Veteran Housing Mission"
+description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for families and service members in East Texas."
 banner:
-variant: hero
-bannerTitle: "Our Mission: Homes for Families & Heroes"
-bannerSubtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing.
-Every home tells the story of those who served."
-image: "banners/hero-about-banner.webp"
-eyebrow: "Veteran Owned & Operated"
-showVoucherBadge: true
-ctaText: "See Our Impact"
-ctaHref: "/impact/"
+  title: "Our Mission: Homes for Families & Heroes"
+  subtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing. Every home tells the story of those who served."
+  image: "hero-about-banner.webp"
+  eyebrow: "Veteran Owned & Operated"
+  ctaText: "See Our Impact"
+  ctaHref: "/impact/"
 ---
 
 <section class="py-16 bg-white">
