--- a/src/impact.html
+++ b/src/impact.html
@@ -1,18 +1,42 @@
 ---
 layout: base.njk
-pageTitle: "Community Impact & Family Success Stories - Properties 4 Creations"
-description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
-renovations, and community impact."
+title: "Community Impact & Family Success Stories - Properties 4 Creations"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact."
 banner:
-variant: "hero"
-bannerTitle: "Real Families, Real Sanctuaries"
-bannerSubtitle: "See the human impact of fair housing through stories of veterans rebuilding their futures."
-image: "banners/hero-impact-banner.webp"
-eyebrow: "Community Impact"
-showVoucherBadge: true
-ctaText: "Share Your Story"
-ctaHref: "/contact/"
+  title: "Real Families, Real Sanctuaries"
+  subtitle: "See the human impact of fair housing through stories of veterans rebuilding their futures."
+  image: "hero-impact-banner.webp"
+  eyebrow: "Community Impact"
+  ctaText: "Share Your Story"
+  ctaHref: "/contact/"
 ---
+
+<!-- Story JSON-LD for Reynolds Family -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "@id": "https://properties4creations.com/impact/#reynolds-story",
+  "headline": "The Reynolds Family - Veteran Housing Success Story",
+  "description": "Sgt. Reynolds and his family's journey from homelessness to stable housing through Properties 4 Creations",
+  "image": "https://properties4creations.com/public/images/properties/before-after/patio_wood.webp",
+  "datePublished": "2024-10-01",
+  "author": {
+    "@type": "Organization",
+    "name": "Properties 4 Creations",
+    "url": "https://properties4creations.com"
+  },
+  "publisher": {
+    "@id": "https://properties4creations.com/#organization"
+  },
+  "about": {
+    "@type": "Organization",
+    "name": "Properties 4 Creations",
+    "description": "Veteran-owned affordable housing provider",
+    "serviceType": ["Affordable Housing", "Veteran Housing", "HUD-VASH Program", "Section 8 Housing"]
+  }
+}
+</script>
 
 <!-- Featured Family Story -->
 <section class="py-20 bg-white">
