--- a/src/gallery.html
+++ b/src/gallery.html
@@ -23,8 +23,6 @@ banner:
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
             <div class="compare-container relative w-full max-w-4xl mx-auto h-[350px] overflow-hidden rounded-xl shadow-lg group">
-                <h3 class="text-xl font-bold text-brand-navy mb-4 text-center">Living Room Transformation</h3>
-
                 <!-- After Image -->
                 <picture>
                     <source srcset="/public/images/properties/before-after/after_living_room-1920.avif" media="(min-width: 1280px)" type="image/avif">
@@ -33,7 +31,7 @@ banner:
                     <source srcset="/public/images/properties/before-after/after_living_room-1920.webp" media="(min-width: 1280px)" type="image/webp">
                     <source srcset="/public/images/properties/before-after/after_living_room-1280.webp" media="(min-width: 960px)" type="image/webp">
                     <source srcset="/public/images/properties/before-after/after_living_room-640.webp" media="(min-width: 640px)" type="image/webp">
-                    <img src="/public/images/properties/before-after/after_living_room.webp"
+                    <img src="/public/images/properties/before-after/after_living_room.jpg"
                          alt="Living room after renovation with new flooring and paint"
                          class="w-full h-full object-cover">
                 </picture>
@@ -47,7 +45,7 @@ banner:
                         <source srcset="/public/images/properties/before-after/patio_wood-1920.webp" media="(min-width: 1280px)" type="image/webp">
                         <source srcset="/public/images/properties/before-after/patio_wood-1280.webp" media="(min-width: 960px)" type="image/webp">
                         <source srcset="/public/images/properties/before-after/patio_wood-640.webp" media="(min-width: 640px)" type="image/webp">
-                        <img src="/public/images/properties/before-after/patio_wood.webp"
+                        <img src="/public/images/properties/before-after/patio_wood.jpg"
                              alt="Patio before renovation showing worn wood flooring"
                              class="w-full h-full object-cover">
                     </picture>
