--- a/src/gallery.html
+++ b/src/gallery.html
@@ -32,7 +32,7 @@ banner:
                     <source srcset="/public/images/properties/before-after/after_living_room-1280.webp" media="(min-width: 960px)" type="image/webp">
                     <source srcset="/public/images/properties/before-after/after_living_room-640.webp" media="(min-width: 640px)" type="image/webp">
                     <img src="/public/images/properties/before-after/after_living_room.jpg"
-                         alt="Living room after renovation with new flooring and paint"
+                         alt="Living room after renovation with new flooring"
                          class="w-full h-full object-cover">
                 </picture>
 
