--- a/src/get-started.html
+++ b/src/get-started.html
@@ -5,7 +5,7 @@ description: "Affordable housing solutions for families and veterans in East Tex
 banner:
   title: "Turn Your Property into Purpose"
   subtitle: "Sell your home for fair market value and create sanctuary for veterans and families. No fees, complete renovation, sustainable community impact."
-  image: "hero-get-started-banner.webp"
+  image: "hero-property-banner.webp"
   eyebrow: "Fair Cash • No Fees • Veteran Impact"
   ctaText: "Get Cash Offer"
   ctaHref: "#impact-form"
