--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ description: "Affordable housing solutions for families and veterans in East Tex
 banner:
   title: "Affordable Homes for Families & Veterans in East Texas"
   subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride."
-  image: "banners/hero-home-banner.webp"
+  image: "hero-home-banner.webp"
   eyebrow: "HUD-VASH & Section 8 Approved"
   showVoucherBadge: true
   ctaText: "Browse Homes for Families & Veterans"
