--- a/src/get-started.html
+++ b/src/get-started.html
@@ -343,7 +343,7 @@ banner:
             <!-- Seller Story -->
             <div class="bg-brand-beige p-8 rounded-xl">
                 <div class="flex items-center gap-4 mb-6">
-                    <img src="/public/images/icons/021-family.png" alt="Home seller story icon" class="w-12 h-12"
+                    <img src="/images/icons/021-family.png" alt="Home seller story icon" class="w-12 h-12"
                         loading="lazy" decoding="async" />
                     <div>
                         <h3 class="font-bold text-brand-navy">Maria Rodriguez - Texas Homeowner</h3>
@@ -361,7 +361,7 @@ banner:
             <!-- Veteran Story -->
             <div class="bg-blue-50 p-8 rounded-xl">
                 <div class="flex items-center gap-4 mb-6">
-                    <img src="/public/images/icons/035-usa.png" alt="Veteran story icon" class="w-12 h-12"
+                    <img src="/images/icons/035-usa.png" alt="Veteran story icon" class="w-12 h-12"
                         loading="lazy" decoding="async" />
                     <div>
                         <h3 class="font-bold text-brand-navy">Sergeant James Wilson - Iraq Veteran</h3>
