--- a/src/about.html
+++ b/src/about.html
@@ -1,18 +1,16 @@
 ---
 layout: base.njk
-pageTitle: "About Properties 4 Creations - Veteran Housing Mission"
-description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for
-families and service members in East Texas."
+pageTitle: "About Properties 4 Creations"
+description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for families and service members in East Texas."
 banner:
-variant: hero
-bannerTitle: "Our Mission: Homes for Families & Heroes"
-bannerSubtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing.
-Every home tells the story of those who served."
-image: "banners/hero-about-banner.webp"
-eyebrow: "Veteran Owned & Operated"
-showVoucherBadge: true
-ctaText: "See Our Impact"
-ctaHref: "/impact/"
+  variant: "hero"
+  bannerTitle: "Our Mission: Homes for Families & Heroes"
+  bannerSubtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing. Every home tells the story of those who served."
+  image: "banners/hero-about-banner.webp"
+  eyebrow: "Veteran Owned & Operated"
+  showVoucherBadge: true
+  ctaText: "See Our Impact"
+  ctaHref: "/impact/"
 ---
 
 <section class="py-16 bg-white">
@@ -37,7 +35,7 @@ ctaHref: "/impact/"
                 </div>
             </div>
             <div class="relative h-96 rounded-2xl overflow-hidden shadow-wood">
-                <img src="/public/images/about/mission-team.webp" alt="Properties 4 Creations Team"
+                <img src="/images/about/mission-team.webp" alt="Properties 4 Creations Team"
                     class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-brand-navy/20"></div>
             </div>
