--- a/src/gallery.html
+++ b/src/gallery.html
@@ -1,16 +1,16 @@
 ---
 layout: base.njk
-pageTitle: "Renovation Gallery | Properties 4 Creations"
+pageTitle: "Renovation Gallery"
 description: "See the transformation. Browse our gallery of veteran housing renovations in East Texas."
 banner:
-variant: hero
-bannerTitle: "Transformation Gallery"
-bannerSubtitle: "Seeing is believing. Slide to explore how we turn distressed properties into dignified family homes."
-image: "banners/hero-projects-banner.webp"
-eyebrow: "Before & After"
-showVoucherBadge: false
-ctaText: "Start Your Project"
-ctaHref: "/contact/"
+  variant: "hero"
+  bannerTitle: "Transformation Gallery"
+  bannerSubtitle: "Seeing is believing. Slide to explore how we turn distressed properties into dignified family homes."
+  image: "banners/hero-projects-banner.webp"
+  eyebrow: "Before & After"
+  showVoucherBadge: false
+  ctaText: "Start Your Project"
+  ctaHref: "/contact/"
 ---
 
 <section class="py-20 bg-white">
