--- a/src/get-started.html
+++ b/src/get-started.html
@@ -4,15 +4,14 @@ pageTitle: "Browse Affordable Homes for Families & Veterans for Purpose | Proper
 description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
 renovations, and community impact."
 banner:
-variant: "hero"
-bannerTitle: "Turn Your Property into Purpose"
-bannerSubtitle: "Sell your home for fair market value and create sanctuary for veterans and families. No fees, complete
-renovation, sustainable community impact."
-image: "banners/hero-get-started-banner.png"
-eyebrow: "Fair Cash • No Fees • Veteran Impact"
-showVoucherBadge: true
-ctaText: "Get Cash Offer"
-ctaHref: "#impact-form"
+  variant: "hero"
+  bannerTitle: "Turn Your Property into Purpose"
+  bannerSubtitle: "Sell your home for fair market value and create sanctuary for veterans and families. No fees, complete renovation, sustainable community impact."
+  image: "banners/hero-get-started-banner.png"
+  eyebrow: "Fair Cash • No Fees • Veteran Impact"
+  showVoucherBadge: true
+  ctaText: "Get Cash Offer"
+  ctaHref: "#impact-form"
 ---
 
 <script type="application/ld+json">
