--- a/src/contact.html
+++ b/src/contact.html
@@ -1,17 +1,16 @@
 ---
 layout: base.njk
-pageTitle: "Contact Us | Properties 4 Creations"
-description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
-renovations, and community impact."
+pageTitle: "Contact Us"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact."
 banner:
-variant: "hero"
-bannerTitle: "We’re Here to Help"
-bannerSubtitle: "Reach out to learn more about our homes, programs, or how we serve East Texas families and veterans."
-image: "banners/hero-contact-banner.webp"
-eyebrow: "Local Support, Real Answers"
-showVoucherBadge: true
-ctaText: "Start Your Journey"
-ctaHref: "/get-started/"
+  variant: "hero"
+  bannerTitle: "We’re Here to Help"
+  bannerSubtitle: "Reach out to learn more about our homes, programs, or how we serve East Texas families and veterans."
+  image: "banners/hero-contact-banner.webp"
+  eyebrow: "Local Support, Real Answers"
+  showVoucherBadge: true
+  ctaText: "Start Your Journey"
+  ctaHref: "/get-started/"
 ---
 
 <section class="max-w-4xl mx-auto py-12 px-4">
