--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,14 @@ pageTitle: "Premium Affordable Housing For Families and Veterans"
 description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
 renovations, and community impact."
 banner:
-variant: "hero"
-bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
-bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
-and
-local pride."
-image: "banners/hero-home-banner.webp"
-eyebrow: "HUD-VASH & Section 8 Approved"
-showVoucherBadge: true
-ctaText: "Browse Homes for Families & Veterans"
-ctaHref: "/projects/"
+  variant: "hero"
+  bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+  bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride."
+  image: "banners/hero-home-banner.webp"
+  eyebrow: "HUD-VASH & Section 8 Approved"
+  showVoucherBadge: true
+  ctaText: "Browse Homes for Families & Veterans"
+  ctaHref: "/projects/"
 ---
 
 {% block head %}
@@ -147,8 +145,9 @@ ctaHref: "/projects/"
             <article
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
-                    <img src="/public/images/properties/tyler-ranch/hero.webp" alt="Tyler Ranch Home"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <img src="/images/properties/tyler-ranch/hero.webp" alt="Tyler Ranch Home - 3BR 2BA property in East Texas"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy" decoding="async">
                     <div
                         class="absolute top-4 left-4 bg-green-500 text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Section 8 Ready</div>
@@ -183,8 +182,9 @@ ctaHref: "/projects/"
             <article
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
-                    <img src="/public/images/properties/longview-victorian/hero.webp" alt="Longview Victorian"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <img src="/images/properties/longview-victorian/hero.webp" alt="Longview Victorian - 4BR 3BA historic property in East Texas"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy" decoding="async">
                     <div
                         class="absolute top-4 left-4 bg-brand-navy text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Historic</div>
@@ -219,8 +219,9 @@ ctaHref: "/projects/"
             <article
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
-                    <img src="/public/images/properties/jefferson-riverfront/hero.webp" alt="Jefferson Riverfront"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <img src="/images/properties/jefferson-riverfront/hero.webp" alt="Jefferson Riverfront - 2BR 1BA waterfront property in East Texas"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy" decoding="async">
                     <div
                         class="absolute top-4 left-4 bg-brand-wood text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Waterfront</div>
@@ -232,11 +233,12 @@ ctaHref: "/projects/"
                 </div>
                 <div class="p-6">
                     <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
-                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"></svg>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
                         Jefferson, TX
                     </div>
                     <h3 class="text-xl font-bold text-brand-navy mb-2 group-hover:text-brand-wood transition-colors">
@@ -313,7 +315,7 @@ ctaHref: "/projects/"
             availableProperties.forEach(p => {
                 const popupContent = '<div class="text-center min-w-[200px] p-2">' +
                     '<div class="h-24 w-full mb-2 rounded overflow-hidden bg-slate-100">' +
-                    '<img src="/public/images/' + p.img + '" class="w-full h-full object-cover" onerror="this.src=\'/public/images/banners/hero-property-fallback.webp\'">' +
+                    '<img src="/images/' + p.img + '" class="w-full h-full object-cover" onerror="this.src=\'/images/banners/hero-property-fallback.webp\'">' +
                     '</div>' +
                     '<b class="text-brand-navy block mb-1 text-sm">' + p.title + '</b>' +
                     '<span class="text-xs text-slate-500 block mb-2">' + p.desc + '</span>' +
