--- a/src/projects.html
+++ b/src/projects.html
@@ -1,16 +1,280 @@
 ---
 layout: base.njk
-pageTitle: "Browse Properties | Properties 4 Creations"
-description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
-renovations, and community impact."
+pageTitle: "Browse Properties"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact."
 banner:
-variant: "hero"
-bannerTitle: "Transforming Properties into Homes"
-bannerSubtitle: "Explore our East Texas property portfolio — all designed for families and veterans."
-video: "hero-banner-new.mp4"
-image: "banners/hero-projects-banner.webp"
-eyebrow: "40+ Properties Renovated"
-showVoucherBadge: false
-ctaText: "Browse Properties"
-ctaHref: "/get-started/"
+  variant: "hero"
+  bannerTitle: "Transforming Properties into Homes"
+  bannerSubtitle: "Explore our East Texas property portfolio — all designed for families and veterans."
+  video: "hero-banner-new.mp4"
+  image: "banners/hero-projects-banner.webp"
+  eyebrow: "40+ Properties Renovated"
+  showVoucherBadge: false
+  ctaText: "Browse Properties"
+  ctaHref: "/get-started/"
 ---
+
+{% block head %}
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+{% endblock %}
+
+<!-- Properties Grid -->
+<div class="bg-white">
+    <div class="max-w-7xl mx-auto px-4 py-12">
+        <div class="text-center mb-12">
+            <div class="inline-flex items-center gap-3 px-6 py-3 rounded-full bg-green-50 border border-green-200 mb-6">
+                <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse shadow-lg shadow-green-500/50"></div>
+                <span class="text-green-700 font-semibold text-sm tracking-wide">Section 8 Vouchers Accepted</span>
+            </div>
+            <h1 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mb-4">Available Homes</h1>
+            <p class="text-lg text-slate-600 max-w-2xl mx-auto">Premium renovations meet fair pricing. Every property includes premium upgrades while maintaining affordability for families and veterans.</p>
+        </div>
+
+        <!-- Filter Controls -->
+        <div class="flex flex-wrap justify-center gap-4 mb-8 bg-slate-50 p-6 rounded-2xl">
+            <button id="filter-all" class="filter-btn active px-4 py-2 rounded-lg bg-brand-navy text-white font-medium hover:bg-brand-wood transition-colors" data-filter="all">All Properties (4)</button>
+            <button id="filter-section8" class="filter-btn px-4 py-2 rounded-lg bg-slate-200 text-slate-700 font-medium hover:bg-brand-wood hover:text-white transition-colors" data-filter="section8">Section 8 Ready</button>
+            <button id="filter-historic" class="filter-btn px-4 py-2 rounded-lg bg-slate-200 text-slate-700 font-medium hover:bg-brand-wood hover:text-white transition-colors" data-filter="historic">Historic</button>
+            <button id="filter-waterfront" class="filter-btn px-4 py-2 rounded-lg bg-slate-200 text-slate-700 font-medium hover:bg-brand-wood hover:text-white transition-colors" data-filter="waterfront">Waterfront</button>
+        </div>
+
+        <!-- Properties Listing -->
+        <div id="properties-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            {% for propertyId, property in properties %}
+            <article class="property-card group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-1 bg-white border border-slate-100" data-property="{{ propertyId }}" data-status="{{ property.status }}" data-voucher="{{ property.voucherType }}">
+                <div class="relative h-64 overflow-hidden">
+                    <img src="/images/{{ property.img }}" alt="{{ property.title }} in {{ property.city }}, TX - {{ property.desc }}"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy" decoding="async"
+                        onerror="this.src='/images/banners/hero-property-fallback.webp'">
+                    <div class="absolute top-4 left-4 flex gap-2">
+                        {% if property.voucherType == "Section 8 Ready" %}
+                        <span class="bg-green-500 text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">Section 8 Ready</span>
+                        {% elif property.voucherType == "Historic Property" %}
+                        <span class="bg-brand-navy text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">Historic</span>
+                        {% elif property.voucherType == "Community Living" %}
+                        <span class="bg-slate-700 text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">Community</span>
+                        {% else %}
+                        <span class="bg-brand-wood text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">{{ property.voucherType }}</span>
+                        {% endif %}
+                    </div>
+                    <div class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-brand-navy/95 to-transparent p-4 pt-12">
+                        <p class="text-white font-bold text-xl">${{ property.price }}<span class="text-sm font-normal opacity-80">/mo</span></p>
+                    </div>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        {{ property.city }}, TX
+                    </div>
+                    <h3 class="text-xl font-bold text-brand-navy mb-3 group-hover:text-brand-wood transition-colors">{{ property.title }}</h3>
+                    <p class="text-slate-600 text-sm mb-4">{{ property.desc }}</p>
+
+                    <!-- Property Stats -->
+                    <div class="grid grid-cols-3 gap-4 mb-4">
+                        <div class="text-center">
+                            <div class="text-lg font-bold text-brand-navy">{{ property.bedrooms }}</div>
+                            <div class="text-xs text-slate-500 uppercase tracking-wide">Bed</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="text-lg font-bold text-brand-navy">{{ property.bathrooms }}</div>
+                            <div class="text-xs text-slate-500 uppercase tracking-wide">Bath</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="text-lg font-bold text-brand-navy">{{ property.sqft }}</div>
+                            <div class="text-xs text-slate-500 uppercase tracking-wide">Sq Ft</div>
+                        </div>
+                    </div>
+
+                    <!-- Features -->
+                    <div class="flex flex-wrap gap-1 mb-4">
+                        {% for feature in property.features %}
+                        <span class="px-2 py-1 bg-slate-100 text-slate-700 text-xs rounded">{{ feature }}</span>
+                        {% endfor %}
+                    </div>
+
+                    <a href="{{ property.link }}" class="inline-flex items-center gap-2 text-brand-navy font-bold hover:text-brand-wood transition-colors">
+                        View Home
+                        <svg class="w-4 h-4 transform group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                        </svg>
+                    </a>
+                </div>
+            </article>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+<!-- Interactive Map Section -->
+<section class="py-20 bg-slate-50">
+    <div class="max-w-7xl mx-auto px-4">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl font-bold text-brand-navy mb-4">Properties Across East Texas</h2>
+            <p class="text-lg text-slate-600">Interactive map showing the location of our renovated homes in Tyler, Longview, Marshall, and Jefferson.</p>
+        </div>
+        <div class="bg-white rounded-2xl p-8 shadow-lg border border-slate-200 overflow-hidden">
+            <div id="properties-map" class="w-full h-96 rounded-xl border border-slate-200 overflow-hidden shadow-inner"></div>
+
+            <div class="mt-6 flex flex-wrap justify-center gap-6 bg-slate-50 p-6 rounded-xl">
+                <div class="flex items-center gap-3">
+                    <div class="w-4 h-4 bg-brand-navy rounded"></div>
+                    <span class="text-sm text-slate-700 font-medium">Available Homes</span>
+                </div>
+                <div class="flex items-center gap-3">
+                    <div class="w-4 h-4 bg-brand-wood rounded"></div>
+                    <span class="text-sm text-slate-700 font-medium">Veteran Preferred</span>
+                </div>
+                <div class="flex items-center gap-3">
+                    <div class="w-4 h-4 bg-green-500 rounded"></div>
+                    <span class="text-sm text-slate-700 font-medium">Waterfront Properties</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Call to Action -->
+<section class="py-20 bg-brand-navy">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+        <h2 class="text-2xl md:text-3xl font-bold text-white mb-6">Ready to Find Your Home?</h2>
+        <p class="text-slate-300 mb-8 text-lg">Contact our team today to tour any of our available East Texas properties. We understand the housing challenges military families face.</p>
+        <div class="flex flex-col sm:flex-row gap-4 justify-center">
+            <a href="/contact" class="btn-base btn-secondary inline-flex items-center justify-center gap-2">
+                <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+                </svg>
+                Contact Us Today
+            </a>
+            <a href="tel:+19032831770" class="btn-base border border-white/30 text-white hover:bg-white hover:text-brand-navy inline-flex items-center justify-center gap-2 transition-colors">
+                <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                </svg>
+                (903) 283-1770
+            </a>
+        </div>
+        <p class="text-slate-400 text-sm mt-6">All properties accept Section 8 vouchers • Veteran-owned & operated</p>
+    </div>
+</section>
+
+{% block scripts %}
+<script id="properties-data" type="application/json">{{ properties | dump | safe }}</script>
+<script src="/js/leaflet.js"></script>
+<script>
+// Property filtering functionality
+document.addEventListener('DOMContentLoaded', function() {
+    const filterButtons = document.querySelectorAll('.filter-btn');
+    const propertyCards = document.querySelectorAll('.property-card');
+
+    // Filter button click handlers
+    filterButtons.forEach(button => {
+        button.addEventListener('click', () => {
+            const filter = button.dataset.filter;
+
+            // Update active button
+            filterButtons.forEach(btn => btn.classList.remove('active', 'bg-brand-navy', 'text-white'));
+            filterButtons.forEach(btn => {
+                btn.classList.add('bg-slate-200', 'text-slate-700');
+                btn.classList.remove('hover:bg-brand-wood', 'hover:text-white');
+            });
+            button.classList.remove('bg-slate-200', 'text-slate-700');
+            button.classList.add('active', 'bg-brand-navy', 'text-white');
+
+            // Filter properties
+            propertyCards.forEach(card => {
+                const voucherType = card.dataset.voucher;
+                let show = false;
+
+                switch(filter) {
+                    case 'all':
+                        show = true;
+                        break;
+                    case 'section8':
+                        show = voucherType === 'Section 8 Ready';
+                        break;
+                    case 'historic':
+                        show = voucherType === 'Historic Property';
+                        break;
+                    case 'waterfront':
+                        show = voucherType === 'Waterfront';
+                        break;
+                }
+
+                card.style.display = show ? 'block' : 'none';
+            });
+        });
+    });
+
+    // Initialize map
+    if (typeof L !== 'undefined' && document.getElementById('properties-map')) {
+        const map = L.map('properties-map').setView([32.1, -95.0], 7);
+
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>'
+        }).addTo(map);
+
+        const createIcon = (propertyData) => {
+            let color = '#0B1120'; // Default brand navy
+
+            if (propertyData.voucherType === 'Section 8 Ready') {
+                color = '#0B1120';
+            } else if (propertyData.voucherType === 'Historic Property') {
+                color = '#C28E5A';
+            } else if (propertyData.voucherType === 'Waterfront') {
+                color = '#10B981'; // Green for waterfront
+            } else if (propertyData.voucherType === 'Community Living') {
+                color = '#64748B'; // Slate for community
+            }
+
+            return L.divIcon({
+                className: 'property-map-icon',
+                html: `<div style="background-color: ${color}; width: 16px; height: 16px; border-radius: 50%; border: 3px solid white; box-shadow: 0 2px 6px rgba(0,0,0,0.3);"></div>`,
+                iconSize: [16, 16],
+                iconAnchor: [8, 8]
+            });
+        };
+
+        const propertiesDataElement = document.getElementById('properties-data');
+        if (propertiesDataElement && propertiesDataElement.textContent) {
+            const properties = JSON.parse(propertiesDataElement.textContent);
+
+            Object.values(properties).forEach(property => {
+                const popupContent = `
+                    <div class="text-center min-w-[200px] p-3">
+                        <div class="h-24 w-full mb-3 rounded overflow-hidden bg-slate-100">
+                            <img src="/images/${property.img}"
+                                 alt="${property.title}"
+                                 class="w-full h-full object-cover"
+                                 onerror="this.src='/images/banners/hero-property-fallback.webp'">
+                        </div>
+                        <b class="text-brand-navy block mb-1 text-sm">${property.title}</b>
+                        <span class="text-xs text-slate-500 block mb-2">${property.city}, TX • ${property.desc}</span>
+                        <span class="text-lg font-bold text-green-600 block mb-2">$${property.price}/mo</span>
+                        <a href="${property.link}" class="bg-brand-navy text-white text-xs px-3 py-2 rounded hover:bg-brand-wood transition-colors block w-full text-center">View Details</a>
+                    </div>
+                `;
+
+                L.marker(property.coords, { icon: createIcon(property) })
+                    .addTo(map)
+                    .bindPopup(popupContent);
+            });
+
+            // Fit map bounds to show all markers
+            const markers = [];
+            Object.values(properties).forEach(property => {
+                markers.push(L.marker(property.coords));
+            });
+
+            if (markers.length > 0) {
+                const group = new L.featureGroup(markers);
+                map.fitBounds(group.getBounds().pad(0.1));
+            }
+        }
+    }
+});
+</script>
+{% endblock %}
