--- a/src/projects/tyler-ranch-home.html
+++ b/src/projects/tyler-ranch-home.html
@@ -1,18 +1,16 @@
 ---
 layout: base.njk
-title: "Tyler Ranch Home - East Texas Family Property"
-description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
-renovations, and community impact."
+pageTitle: "Tyler Ranch Home"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact."
 banner:
-variant: "hero"
-title: "Affordable Homes for Families & Veterans in East Texas"
-subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and
-local pride."
-image: "banners/hero-property-fallback.webp"
-eyebrow: "HUD-VASH & Section 8 Approved"
-showVoucherBadge: true
-ctaText: "Browse Homes for Families & Veterans"
-ctaHref: "/get-started/"
+  variant: "hero"
+  bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+  bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride."
+  image: "banners/hero-property-fallback.webp"
+  eyebrow: "HUD-VASH & Section 8 Approved"
+  showVoucherBadge: true
+  ctaText: "Browse Homes for Families & Veterans"
+  ctaHref: "/get-started/"
 ---
 
 <!-- Main Content -->
@@ -22,32 +20,20 @@ ctaHref: "/get-started/"
 <section class="bg-slate-900 text-white py-8">
     <div class="max-w-6xl mx-auto px-4">
         <div class="bg-slate-800 rounded-lg p-8 text-center">
-            <div class="relative w-full h-[500px] md:h-[600px] overflow-hidden group rounded-xl shadow-2xl my-8">
+            <div class="compare-slider relative w-full h-[500px] md:h-[600px] overflow-hidden group rounded-xl shadow-2xl my-8">
 
-                <div class="absolute inset-0 w-full h-full bg-cover bg-center"
-                    style="background-image: url('/public/images/projects_finished_wood_deck.jpg');">
-                    <div
-                        class="absolute top-6 right-6 bg-brand-sage/90 backdrop-blur text-white px-4 py-2 rounded-lg font-bold shadow-lg z-20">
-                        AFTER: Premium Finish
-                    </div>
-                </div>
+                <div class="compare-after absolute inset-0 w-full h-full bg-cover bg-center"
+                    data-background="/images/projects_finished_wood_deck.jpg"></div>
 
-                <div id="compare-overlay"
-                    class="absolute inset-0 w-[50%] h-full bg-cover bg-center border-r-4 border-white z-10"
-                    style="background-image: url('/public/images/projects_before_wood_deck.jpg');">
-                    <div
-                        class="absolute top-6 left-6 bg-slate-800/90 backdrop-blur text-white px-4 py-2 rounded-lg font-bld shadow-lg">
-                        BEFORE: Initial State
-                    </div>
-                </div>
+                <div id="compare-overlay" class="compare-before absolute inset-0 w-[50%] h-full bg-cover bg-center border-r-4 border-white z-10"
+                    data-background="/images/projects_before_wood_deck.jpg"></div>
 
                 <input type="range" min="0" max="100" value="50"
-                    class="absolute inset-0 w-full h-full opacity-0 cursor-ew-resize z-30"
+                    class="compare-slider-input absolute inset-0 w-full h-full opacity-0 cursor-ew-resize z-30"
                     oninput="document.getElementById('compare-overlay').style.width = this.value + '%'">
 
-                <div class="absolute inset-0 pointer-events-none z-20 flex items-center justify-center">
-                    <div
-                        class="bg-white text-brand-navy rounded-full p-2 shadow-xl border-2 border-brand-navy transform hover:scale-110 transition-transform">
+                <div class="compare-center absolute inset-0 flex items-center justify-center z-20 pointer-events-none">
+                    <div class="compare-center-element bg-white text-brand-navy rounded-full p-2 shadow-xl border-2 border-brand-navy transform hover:scale-110 transition-transform">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -55,10 +41,37 @@ ctaHref: "/get-started/"
                         </svg>
                     </div>
                 </div>
+
+                <div class="compare-label compare-label-after absolute top-6 right-6 bg-brand-sage/90 backdrop-blur text-white px-4 py-2 rounded-lg font-bold shadow-lg z-20">
+                    AFTER: Premium Finish
+                </div>
+
+                <div class="compare-label compare-label-before absolute top-6 left-6 bg-slate-800/90 backdrop-blur text-white px-4 py-2 rounded-lg font-bold shadow-lg">
+                    BEFORE: Initial State
+                </div>
             </div>
         </div>
     </div>
 </section>
+
+{% block scripts %}
+<script>
+    // Initialize before/after comparison slider
+    document.addEventListener('DOMContentLoaded', function () {
+        // Set background images from data attributes
+        const afterElement = document.querySelector('.compare-after');
+        const beforeElement = document.querySelector('.compare-before');
+
+        if (afterElement && afterElement.dataset.background) {
+            afterElement.style.backgroundImage = 'url(' + afterElement.dataset.background + ')';
+        }
+
+        if (beforeElement && beforeElement.dataset.background) {
+            beforeElement.style.backgroundImage = 'url(' + beforeElement.dataset.background + ')';
+        }
+    });
+</script>
+{% endblock %}
 
 <!-- Property Overview -->
 <section class="py-16 bg-white">
@@ -214,17 +227,17 @@ ctaHref: "/get-started/"
                     <input type="hidden" name="_subject" value="Lead: Tyler Ranch Home">
                     <input type="hidden" name="_next" value="/thank-you.html">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                    <input type="text" name="name" required class="input-base">
+                    <label for="contact-name" class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
+                    <input type="text" id="contact-name" name="name" required class="input-base" title="Full Name">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="input-base">
+                    <label for="contact-email" class="block text-sm font-medium text-slate-700 mb-1">Email</label>
+                    <input type="email" id="contact-email" name="email" required class="input-base" title="Email Address">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
-                    <input type="tel" name="phone" required class="input-base">
+                    <label for="contact-phone" class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
+                    <input type="tel" id="contact-phone" name="phone" required class="input-base" title="Phone Number">
 
                     <div class="flex items-center">
-                        <input type="checkbox" id="veteran" name="veteran" class="mr-2">
+                        <input type="checkbox" id="veteran" name="veteran" class="mr-2" title="Military veteran status">
                         <label for="veteran" class="text-sm text-slate-700">U.S. Military Veteran</label>
                     </div>
 
